fixed pieces alignment, black's perspective + added rotational button + animation

--- a/chess.css
+++ b/chess.css
@@ -1,52 +1,15 @@
-th {
-  width: 100px;
-  height: 100px;
-  max-width: 20%;
-  max-height: 20%;
-}
-tr {
-  width: 20%;
-  height: 20%;
-}
-.chess-board { border-spacing: 0; border-collapse: collapse;}
-.chess-board th { padding: .5em; }
-.chess-board th + th { border-bottom: 1px solid #000; }
-.chess-board th:first-child,
-.chess-board td:last-child { border-right: 1px solid #000; }
-.chess-board tr:last-child td { border-bottom: 1px solid; }
-.chess-board th:empty { border: none;}
-.chess-board td { width: 1.5em; height: 1.5em; text-align: center; font-size: 32px; line-height: 0;}
 
-.chess-board .light { background: #a6a2a2;
-  position: relative;
-  /*width: 75px;
-  height: 75px;
-  max-height: 75px;*/
- }
-
-.chess-board .dark { background: #3c3c42;
-  position: relative;
-  /*width: 75px;
-  height: 75px;
-  max-height: 75px;*/
-}
-.chess-board .selected { background: #fffc41; }
-.gameprefix {
-  width: 75px;
-  height: 75px;
-}
 
 .chess-board {
   background-color: black;
 }
 
-
 .piece-img {
+  max-width: 100%;
+  max-height: 100%;
   display:flex;
-  width:100%;
-  height:100px;
-  max-width:75px;
-  max-height:75px;
+  width:95%;
+  height:95%;
   /*
   min-width:50px;
   min-height:50px;
@@ -60,15 +23,6 @@ tr {
   border: 1px solid #000000;
 }
 
-
-.rook {
-  background-image: url(rook.png);
-  background-size: cover;
-}
-
-.white-rook {
-  background-color: white;
-}
 
 #topFooter{
   background-color: #2B2929;
@@ -86,6 +40,7 @@ tr {
 .flex-container1{
   display:flex;
   position: relative;
+  width: 90%;
 }
 
 .column {
@@ -95,11 +50,12 @@ tr {
 .left {
   margin: 24px;
   flex-grow: 1;
+  position: relative;
 }
 
 .right{
-  margin:24px;
-  background-color:rgb(216, 211, 211);
+    margin: 3vh;
+    background-color:rgb(216, 211, 211);
   flex-grow: .5;
 }
 
@@ -109,7 +65,7 @@ tr {
   clear:both;
 }
 
-#board{
+#game_page{
   background-color:#3b3939;
 }
 
@@ -129,7 +85,6 @@ tr {
   padding:20px;
   flex:1;
   font-family: "Arial";
-  font-size: auto;
 
 }
 
@@ -196,18 +151,16 @@ footer{
 }
 
 .square{
-  width:100%;
-  height:100px;
-  max-width:100px;
-  max-height:100px;
-  display: flex;
-  border-color: orange;
-  border-width: 51px;
   position: relative;
+  justify-content: center;
+  align-items: center;
+  width:10vh;
+  height: 10vh;
 }
 
 .black{
   background-color: #3c3c42;
+
 }
 
 .white{
@@ -215,28 +168,29 @@ footer{
 }
 
 .pieceholder{
-  width:100%;
-  height:100px;
-  max-width:75px;
-  max-height:75px;
-  display: flex;
+  position: absolute;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  width:90%;
+  height:90%;
   /*background-color: #fffc41;*/
-  margin-top: 12px;
-  margin-left:12px;
-  position:relative;
+  left:5%;
+  top:5%;
+
 }
 
 .superscript{
   position:absolute;
-  width:100%;
-  height:100%;
-  max-width:20px;
-  max-height:20px;
-  display: flex;
-  background-color: lightblue;
-  right:3px;
-  top: 3px;
-  z-index:4;
+  box-sizing: border-box;
+  width:20%;
+  height:20%;
+
+  background-color: yellow;
+  right:5%;
+  top: 5%;
+  z-index:5;
+
 }
 
 .tilenumber{
@@ -247,11 +201,11 @@ footer{
   max-height:25px;
   display: flex;
   color:white;
-  left:6px;
-  top: 3px;
+  left: 2%;
+  top: 2%;
   font-family: Arial, Helvetica, sans-serif;
   font-size:20px;
-  z-index:4;
+
 }
 
 .tileletter{
@@ -262,18 +216,29 @@ footer{
   max-height:25px;
   display: flex;
   color:white;
-  right: -7px;
-  bottom: 3px;
+  right: 2%;
+  bottom: 2%;
   font-family: Arial, Helvetica, sans-serif;
   font-size:20px;
-  z-index:4;
+
 }
 
 .legal-move-space-img{
+
   position: absolute;
-  top: 15px;
-  left: 13px;
-  width: 50px;
-  height: 50px;
+  top: 20%;
+  left: 20%;
+  max-width: 60%;
+  max-height: 60%;
   z-index: 3;
+}
+
+.menu-image{
+  position: relative;
+  top:0;
+  left: -5vh;
+  width: 4vh;
+  height: 4vh;
+  border: 10px black;
+  cursor: pointer;
 }
